Added pagination in hibernate

--- a/src/main/resources/handlebars/JavaSpring/model.mustache
+++ b/src/main/resources/handlebars/JavaSpring/model.mustache
@@ -283,9 +283,12 @@ public class {{classname}}RepositoryImpl implements {{classname}}Repository {
 			sql = sql.substring(0, sql.length() - 5);
 		}
 		
-		results = entityManager.createNativeQuery(sql, {{classname}}.class).getResultList();
+		results = entityManager.createNativeQuery(sql, {{classname}}.class)
+		.setMaxResults(pageable.getPageSize())
+		.setFirstResult(pageable.getPageNumber() * pageable.getPageSize())
+		.getResultList();
 		
-		return new PageImpl<>(results, pageable, results.size());
+		return new PageImpl<>(results, pageable, pageable.getPageSize());
 	}
 
 	@Override
@@ -295,9 +298,12 @@ public class {{classname}}RepositoryImpl implements {{classname}}Repository {
 		
 		String sql = "SELECT * from `{#lowercase}{{classname}}{/lowercase}` ";
 		
-		results = entityManager.createNativeQuery(sql, {{classname}}.class).getResultList();
+		results = entityManager.createNativeQuery(sql, {{classname}}.class)
+		.setMaxResults(pageable.getPageSize())
+		.setFirstResult(pageable.getPageNumber() * pageable.getPageSize())
+		.getResultList();
 		
-		return new PageImpl<>(results, pageable, results.size());
+		return new PageImpl<>(results, pageable, pageable.getPageSize());
 	}
 }
 
